@@ -250,7 +250,6 @@ Button2-Off -> Add Window To Tab Group
 
 tabbar-keymap (Those bindings are active when the pointer is on the tabbar)
 
-Button1-Off -> Maybe Raise Tab
 Button1-Off2 -> Toggle Window Shaded
 Button1-Move -> Move Window Interactively
 Button2-Off -> Tab Add To Group
