@@ -126,7 +126,6 @@
     :type keymap)
 
   (defcustom tabbar-keymap (bind-keys (make-keymap)
-				      "Button1-Off" 'maybe-raise-tab
 				      "Button1-Off2" 'toggle-window-shaded
 				      "Button1-Move" 'move-window-interactively
 				      "Button2-Off" 'tab-add-to-group
