@@ -1,3 +1,11 @@
+2011-02-22  Christopher Roy Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/keymaps.jl
+	* lisp/sawfish/wm/tabs/tabgroup.jl: remove tab-raise-on-hover and
+	maybe-raise-tab. Instead make, what was tab-raise-on-hover the
+	predefined behaviour.
+
+	* KEYBINDINGS: small update
+
 2011-02-21  Christopher Roy Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/tabs/tabgropu.jl: make opaque move and
 	resize animator work with tabbed windows. Improved various functions
